--- a/src/Component/AdminLogin/AdminLogin.css
+++ b/src/Component/AdminLogin/AdminLogin.css
@@ -29,7 +29,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    background-image: url('../Assets/safety1.jpg');
+    /* background-image: url('../Assets/safety1.jpg'); */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -51,7 +51,7 @@
     z-index: 2;
     width: 350px;
     height: 350px;
-    background: url('../Assets//safety1.jpg') center/cover;
+    /* background: url('../Assets//safety1.jpg') center/cover; */
     border-radius: 20px;
     padding: 1rem;
     display: flex;
@@ -64,7 +64,7 @@
     width: 100%;
     height: auto;
     padding: 1rem;
-    background: rgb(55, 52, 76);
+    /* background: rgb(55, 52, 76); */
     border-radius: 15px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
