sbs final logo added in all except employee login page

--- a/src/Component/Shared/AdminSidebar/AdminSidebar.css
+++ b/src/Component/Shared/AdminSidebar/AdminSidebar.css
@@ -118,8 +118,9 @@
 }
 
 .admin-company-logo {
-  height: 40px;
-  margin-left: 15px;
+  height: 89px;
+width: 100px;  
+margin-left: 15px;
 }
 
 .admin-header-right {
